manifest/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: demo
  annotations:
    # Specifies that the ALB should be public-facing
    alb.ingress.kubernetes.io/scheme: internet-facing
    # Tells AWS to route traffic directly to pod IPs (EKS best practice)
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb # CRITICAL: This replaces the deprecated annotation
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-service
                port:
                  number: 80
